# integration_with_mailchimp

./: README.md  dump.rdb  pyproject.toml
integration/: manage.py
integration/emails/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py
integration/emails/migrations/: 0001_initial.py  0002_emaillog_user.py  0003_remove_emaillog_user.py
integration/integration/: __init__.py  asgi.py  celery.py  settings.py  wsgi.py
