[tool.poetry]
name = "integration-with-mailchimp"
version = "0.1.0"
description = ""
authors = ["Daria <DZueva26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.16"
celery = "^5.4.0"
djangorestframework = "3.12.4"
requests = "^2.32.3"
redis = "^5.0.7"
django-celery-results = "2.3.0"
django-celery-beat = "^2.6.0"
python-dotenv = "^1.0.1"
flake8 = "^7.1.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
